--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -23,11 +23,11 @@ jobs:
           uses: docker/build-push-action@v5
           with:
             context: .
-            file: ./Dockerfile
+            file: ./dockerfile
             push: true
             tags: |
-              ghcr.io/calfur/q-swiper/map-generator:${{ github.sha }}
-              ghcr.io/calfur/q-swiper/map-generator:latest
+              ghcr.io/q-swiper/map-generator:${{ github.sha }}
+              ghcr.io/q-swiper/map-generator:latest
             build-args: |
               VERSION=alpine
             platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
