--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -6,28 +6,42 @@ on:
   workflow_dispatch:
 
 jobs:
-   build-docker-image:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout repository
-          uses: actions/checkout@v4
+  build-docker-image:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-        - name: Set up Docker Buildx
-          id: buildx
-          uses: docker/setup-buildx-action@v3
-  
-        - name: Login to GitHub Container Registry
-          run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v3
 
-        - name: Build and push Docker image
-          uses: docker/build-push-action@v5
-          with:
-            context: .
-            file: ./dockerfile
-            push: true
-            tags: |
-              ghcr.io/q-swiper/map-generator:${{ github.sha }}
-              ghcr.io/q-swiper/map-generator:latest
-            build-args: |
-              VERSION=alpine
-            platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
+      - name: Login to GitHub Container Registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./dockerfile
+          push: true
+          tags: |
+            ghcr.io/q-swiper/map-generator:${{ github.sha }}
+            ghcr.io/q-swiper/map-generator:latest
+          build-args: |
+            VERSION=alpine
+          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
+
+  deploy-docker-image:
+    needs: build-docker-image
+    runs-on: ubuntu-latest
+    steps:
+      - name: SSH, docker-compose pull, docker-compose up
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd /opt/docker-projects/q-swiper
+            docker-compose pull && docker-compose up -d --force-recreate
